--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -19,9 +19,3 @@
     height: 10rem;
 }
 
-//Desktop
-@media (min-width: $desktop-breakpoint) {
-    .text-input {
-        min-width:  22rem;
-    }
-}
