--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -1,9 +1,10 @@
 .loader {
     align-items: center;
     display: flex;
-    height: 100vh;
+    flex-grow: 1;
+    height: 100%;
     justify-content: center;
-    width: 100vw;
+    margin: 5rem 0;
 }
 
 .loader__image {
